# Little-Red-Riding-Wolves

./: .gitignore  CMakeLists.txt  README  design.txt  display.cpp  drawable.h  fence.h  input.cpp  load_png.cpp  main.cpp  path.h  world.cpp  world.h
common/: CMakeLists.txt  point.h
graphics/: CMakeLists.txt  graphics.h  gui.cpp  text.cpp
house/: house.h
images/: load_png.cpp  textures.h
red/: red.cpp  red.h
tree/: bush.h  grass.h  tree.h
wolf/: wolf.cpp  wolf.h
